[tool.poetry]
name = "sampler"
version = "1.0.0"
description = "Sample files from based on config.yaml"
authors = ["Kyle Bloom <kylejbloom@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
